--- a/front-web/src/assets/css/App.css
+++ b/front-web/src/assets/css/App.css
@@ -2,34 +2,16 @@
   text-align: center;
 }
 
-/*
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-*/
-
 .App-header {
+  position: relative;
   background-color: #222;
   padding: 20px;
   color: white;
 }
 
-/*
-.App-title {
-  font-size: 1.5em;
+.App-btn-logout {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
 }
-*/
-
-/*
-.App-intro {
-  font-size: large;
-}
-*/
-
-/*
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-*/
