--- a/front-web/src/assets/css/App.css
+++ b/front-web/src/assets/css/App.css
@@ -3,10 +3,15 @@
 }
 
 .App-header {
-  position: relative;
   background-color: #222;
   padding: 20px;
   color: white;
+}
+
+.App-nav-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .App-btn-logout {
